--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="app.gotogether.com.go_together">
 
+    <users-permission android:name="android.permission.INTERNET"></users-permission>
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
